--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="The best hotel in Georgia" />
     <meta name="kewards" content="hotel, rest, Georgia" />
+    
+      <meta property="og:title" content="My Web Site Title" />
+  <meta property="og:description" content="The page short description" />
+  <meta property="og:image" content="https://5.imimg.com/data5/SQ/TE/MY-11356561/yellow-rose-plant-500x500.jpg" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" />
