--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Our Website Title" />
     <meta property="og:description" content="Our website Description" />
-    <meta property="og:image" content="https://github.com/BachiMjavanadze/hotel-float-layout-/blob/master/img/showcase.jpg" />
+    <meta property="og:image" content="http://www.hotelroomsearch.net/im/hotels/ge/hotel-pyramida-5.jpg" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" />
